--- a/client/components/PetShopWindow.scss
+++ b/client/components/PetShopWindow.scss
@@ -1,9 +1,15 @@
 
 .pet {
-  background: #eee;
+  background: rgba(140, 140, 156, 0.7);
   float: left;
   margin: 1rem;
   padding: 0 1rem;
   height: 320px;
   width: 200px;
+}
+
+div{
+  margin-top: 20px;
+  position: inline-block;
+
 }
