--- a/client/components/PetShopWindow.scss
+++ b/client/components/PetShopWindow.scss
@@ -1,3 +1,9 @@
+body{
+  background: url(http://www.clker.com/cliparts/E/v/f/z/O/K/sunny-day.svg) no-repeat center center fixed;
+  background-size: cover;
+  font-family: "Indie Flower";
+  font-size: 20px;
+}
 
 .pet {
   background: rgba(140, 140, 156, 0.7);
@@ -6,10 +12,37 @@
   padding: 0 1rem;
   height: 320px;
   width: 200px;
+  border-radius: 20px;
+  -webkit-box-shadow: 6px 10px 37px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 10px 37px 1px rgba(0,0,0,0.75);
+  box-shadow: 6px 10px 37px 1px rgba(0,0,0,0.75);
+}
+
+.pet:hover{
+  margin-top: -2px;
+  -webkit-box-shadow: 6px 11px 56px 1px rgba(0,0,0,1);
+  -moz-box-shadow: 6px 11px 56px 1px rgba(0,0,0,1);
+  box-shadow: 6px 11px 56px 1px rgba(0,0,0,1);
 }
 
 div{
   margin-top: 20px;
   position: inline-block;
+}
 
+p{
+  margin-top: 1px;
+}
+
+h1{
+  text-align: center;
+  font-family: Pacifico;
+  color: pink;
+  font-size: 100px;
+}
+
+fieldset{
+  margin-left: auto;
+  margin-right: auto;
+  width: 20em;
 }
